feat: add metrics filter